[gd_scene load_steps=5 format=2]

[ext_resource path="res://menus/main_menu.tscn" type="PackedScene" id=1]
[ext_resource path="res://menus/options_menu.tscn" type="PackedScene" id=2]
[ext_resource path="res://game.gd" type="Script" id=3]
[ext_resource path="res://menus/game_menu.tscn" type="PackedScene" id=4]

[node name="Game" type="Node"]
script = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
visible = false

[node name="MainMenu" parent="." instance=ExtResource( 1 )]

[node name="GameMenu" parent="." instance=ExtResource( 4 )]
visible = false

[node name="OptionsMenu" parent="." instance=ExtResource( 2 )]
visible = false
